--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title data-i18n-key="title">JaluzeleComrat</title>
-    <meta name="description" data-i18n-key="metaDescription" content="Современный прототип сайта для производителя жалюзи и рулонных штор: каталог, портфолио, быстрый заказ и адаптивный дизайн." />
-    <link rel="shortcut icon" type="image/x-icon" href="IMG_7565.JPG">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title data-i18n-key="title">JaluzeleComrat</title>
+    
+    <base href="/JaluzeleComrat/">
+    
+    <meta name="description" data-i18n-key="metaDescription" content="Современный прототип сайта для производителя жалюзи и рулонных штор: каталог, портфолио, быстрый заказ и адаптивный дизайн." />
+    <link rel="shortcut icon" type="image/x-icon" href="IMG_7565.JPG">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -351,3 +354,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
